# uebernotes

./: .clang-format  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
core/: CMakeLists.txt
core/include/core/: appcontext.hpp  book.hpp  common_types.hpp  comparator.hpp  config.hpp  database.hpp  logger.hpp  note.hpp  storage.hpp  types.hpp
core/src/: book.cpp  database.cpp  logger.cpp  note.cpp  storage.cpp
core/src/core/: book.cpp  database.cpp  database.hpp  note.cpp  storage.cpp
core/tests/: smoke.cpp  storage.cpp
docs/: plan.md  style.md  tasks.md
linux/: CMakeLists.txt  main.cpp
linux/include/linux/: argparser.hpp  cli.hpp  client.hpp  component.hpp  logger.hpp  metadata.hpp  pager.hpp  tui.hpp
linux/include/linux/tui/: book_list.hpp  common.hpp  preview_pane.hpp  status_line.hpp
linux/src/: argparser.cpp  cli.cpp  client.cpp  focusable_wrapper.cpp  ignore_event.cpp  logger.cpp  main.cpp  pager.cpp  tui.cpp
linux/src/ftxui/: border_decorator.cpp  component.hpp  event_handler.cpp  focusable_wrapper.cpp  ignore_event.cpp  line_filler.cpp  pager.cpp
linux/src/ftxui/utils/: optional_ref.hpp
linux/src/linux/: argparser.cpp  argparser.hpp  cli.cpp  cli.hpp  logger.cpp  logger.hpp  pager.cpp  tui.cpp  tui.hpp
linux/src/linux/tui/: book_list.cpp  book_list.hpp  books.cpp  books.hpp  bottom_line.cpp  bottom_line.hpp  common.cpp  common.hpp  communicator.cpp  communicator.hpp  context.hpp  event_queue.cpp  event_queue.hpp  history.cpp  history.hpp  history_panel.cpp  history_panel.hpp  menu_controller.hpp  menu_mvc.hpp  mvc.hpp  note_list.cpp  note_list.hpp  notes.cpp  notes.hpp  preview.cpp  preview.hpp  preview_pane.cpp  preview_pane.hpp  status.cpp  status.hpp  status_line.hpp
linux/src/linux/tui/menu/: controller.hpp  index_cache.hpp  model.hpp  mvc.hpp  sorter.hpp  view.hpp
linux/src/linux/utils/: noncopyable.hpp
linux/src/tui/: book_list.cpp  note_list.cpp
linux/tests/: cli.cpp  tui.cpp
